- added test(combined-c-c++-test) for compiling and then linking mixed c and c++ project - added test(2d-variable-string-array) for dynamically allocating a 2d   array of struct pointer containing a string - reworked get_regex_matches to use init_2d_str_cont ( currently it   uses a max string length value and initalizes empty strings when   there are no matches

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,6 +7,7 @@ subtests:
 	$(MAKE) -C hashtables_tests/      all
 	$(MAKE) -C geoip_tests/           all
 	$(MAKE) -C uap/                   all
+	$(MAKE) -C combined-c-c++-test/   all
 
 clean:
 	$(MAKE) -C dirents_stat_mv_tests clean
@@ -15,3 +16,4 @@ clean:
 	$(MAKE) -C hashtables_tests      clean
 	$(MAKE) -C geoip_tests/          clean
 	$(MAKE) -C uap/                  clean
+	$(MAKE) -C combined-c-c++-test/  clean
