--- a/tests/uap/test_resources/pgts_browser_list.yaml
+++ b/tests/uap/test_resources/pgts_browser_list.yaml
@@ -14,14 +14,14 @@ test_cases:
 
   - user_agent_string: 'ACS-NF/3.0 NEC-c616/001.00'
     family: 'Other'
-    major:
-    minor:
+    major: '3'
+    minor: '0'
     patch:
 
   - user_agent_string: 'ACS-NF/3.0 NEC-e616/001.01 (www.proxomitron.de)'
     family: 'Other'
-    major:
-    minor:
+    major: '3'
+    minor: '0'
     patch:
 
   - user_agent_string: 'ActiveBookmark 1.0'
@@ -91,9 +91,9 @@ test_cases:
     patch:
 
   - user_agent_string: 'Arexx (AmigaVoyager/2.95; AmigaOS/MC680x0)'
-    family: 'Other'
-    major:
-    minor:
+    family: 'AmigaVoyager'
+    major: '2'
+    minor: '95'
     patch:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; Voyager; AmigaOS)'
@@ -109,28 +109,28 @@ test_cases:
     patch:
 
   - user_agent_string: 'AmigaVoyager/2.95 (compatible; MC680x0; AmigaOS)'
-    family: 'Other'
-    major:
-    minor:
+    family: 'AmigaVoyager'
+    major: '2'
+    minor: '95'
     patch:
 
   - user_agent_string: 'Mozilla/3.01 (compatible; AmigaVoyager/2.95; AmigaOS/MC680x0)'
-    family: 'Other'
-    major:
-    minor:
+    family: 'AmigaVoyager'
+    major: '2'
+    minor: '95'
     patch:
 
   - user_agent_string: 'AmigaVoyager/3.3.122 (AmigaOS/PPC)'
-    family: 'Other'
-    major:
-    minor:
-    patch:
+    family: 'AmigaVoyager'
+    major: '3'
+    minor: '3'
+    patch: '122'
 
   - user_agent_string: 'AmigaVoyager/3.4.4 (MorphOS/PPC native)'
-    family: 'Other'
-    major:
-    minor:
-    patch:
+    family: 'AmigaVoyager'
+    major: '3'
+    minor: '4'
+    patch: '4'
 
   - user_agent_string: 'Amiga Voyager'
     family: 'Other'
@@ -146,26 +146,26 @@ test_cases:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; ANTFresco 1.20; RISC OS 3.11)'
     family: 'Other'
-    major:
-    minor:
+    major: '1'
+    minor: '20'
     patch:
 
   - user_agent_string: 'Mozilla/3.04 (compatible; ANTFresco/2.13; RISC OS 4.02)'
     family: 'Other'
-    major:
-    minor:
+    major: '2'
+    minor: '13'
     patch:
 
   - user_agent_string: 'Mozilla/3.04 (compatible; NCBrowser/2.35 (1.45.2.1); ANTFresco/2.17; RISC OS-NC 5.13 Laz1UK1802)'
     family: 'Other'
-    major:
-    minor:
+    major: '2'
+    minor: '17'
     patch:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; ANTFresco 2.20; RISC OS 3.11)'
     family: 'Other'
-    major:
-    minor:
+    major: '2'
+    minor: '20'
     patch:
 
   - user_agent_string: 'AOLserver-Tcl/3.5.6'
@@ -205,21 +205,21 @@ test_cases:
     patch:
 
   - user_agent_string: 'Arexx (AmigaVoyager/2.95; AmigaOS/MC680x0; Mod-X by Pe)'
-    family: 'Other'
-    major:
-    minor:
+    family: 'AmigaVoyager'
+    major: '2'
+    minor: '95'
     patch:
 
   - user_agent_string: 'Arexx (compatible; AmigaVoyager/2.95; AmigaOS'
-    family: 'Other'
-    major:
-    minor:
+    family: 'AmigaVoyager'
+    major: '2'
+    minor: '95'
     patch:
 
   - user_agent_string: 'Arexx (compatible; AmigaVoyager/2.95; AmigaOS)'
-    family: 'Other'
-    major:
-    minor:
+    family: 'AmigaVoyager'
+    major: '2'
+    minor: '95'
     patch:
 
   - user_agent_string: 'ARexx (compatible; ARexx; AmigaOS)'
@@ -235,8 +235,8 @@ test_cases:
     patch:
 
   - user_agent_string: 'Arexx (compatible; MSIE 6.0; AmigaOS5.0) IBrowse 4.0'
-    family: 'IE'
-    major: '6'
+    family: 'IBrowse'
+    major: '4'
     minor: '0'
     patch:
 
@@ -602,8 +602,8 @@ test_cases:
 
   - user_agent_string: 'Contiki/1.0 (Commodore 64; http://dunkels.com/adam/contiki/)'
     family: 'Other'
-    major:
-    minor:
+    major: '1'
+    minor: '0'
     patch:
 
   - user_agent_string: 'ConveraMultiMediaCrawler/0.1 (+http://www.authoritativeweb.com/crawl)'
@@ -625,7 +625,7 @@ test_cases:
     patch:
 
   - user_agent_string: 'Crawler0.1'
-    family: 'Crawler0'
+    family: 'Other'
     major:
     minor:
     patch:
@@ -881,7 +881,7 @@ test_cases:
     major:
     minor:
     patch:
-
+ 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; iebar; Crazy Browser 1.0.5; .NET CLR 1.1.4322)'
     family: 'Crazy Browser'
     major: '1'
@@ -1304,8 +1304,8 @@ test_cases:
 
   - user_agent_string: 'EasyDL/3.04  http://keywen.com/Encyclopedia/Bot'
     family: 'Encyclopedia/Bot'
-    major:
-    minor:
+    major: '3'
+    minor: '04'
     patch:
 
   - user_agent_string: 'ELinks (0.10rc1; Linux 2.6.9-gentoo-r10 i686; 80x25)'
