--- a/tests/uap/tests/test_os3.yaml
+++ b/tests/uap/tests/test_os3.yaml
@@ -307,10 +307,10 @@ test_cases:
     patch_minor: '979'
   - user_agent_string: 'Mozilla/5.0 (BlackBerry; U; BlackBerry 9900; en-US) AppleWebKit/534.11+ (KHTML, like Gecko) Version/7.0.0.585 Mobile Safari/534.11+'
     family: 'BlackBerry OS'
-    major:
-    minor:
-    patch:
-    patch_minor: 
+    major: '7'
+    minor: '0'
+    patch: '0'
+    patch_minor: '585'
   - user_agent_string: 'Mozilla/5.0 (Linux; Android 4.0.3; MID7034 Build/IML74K) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.166 Safari/535.19'
     family: 'Android'
     major: '4'
