added session file and minor cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .*.sw*
 *.o
 .*.o
-*.vim
 htlog_analyzer
 tests/dirents_stat_mv_tests/get_dents
 tests/dirents_stat_mv_tests/move_files
@@ -15,3 +14,5 @@ tests/pthread_tests/pthreads_read_lines
 make.err.log
 cloudstats
 logfile
+logfiles
+logs
