--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,12 @@
 .*.sw*
 *.o
 .*.o
+*.d
+*.a
 htlog_analyzer
-tests/dirents_stat_mv_tests/get_dents
-tests/dirents_stat_mv_tests/move_files
-tests/hashtables_tests/hashlibi
-tests/hashtables_tests/hcreate
-tests/mysql_client_tests/mysql_query_did
-tests/mysql_client_tests/mysql_version
-tests/pthread_tests/pthread_read_n_files
-tests/pthread_tests/pthreads_read_lines
+tests/combined-c-c++-test/square
+tests/uap-cpp/UaParserTest
+tests/uap-cpp/uap
 make.err.log
 cloudstats
 logfile
